--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -209,7 +211,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "\"art.vandelay@vandelay.co\". # False"
    ]
   },
   {
